--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.20",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
