--- a/package.json
+++ b/package.json
@@ -22,18 +22,23 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.63.0",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.0",
     "@types/gtag.js": "^0.0.20",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "chrome-launcher": "^1.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
+    "lighthouse": "^13.0.1",
     "postcss": "^8",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
